Remove deprecated usage of icons

--- a/app/views/spree/admin/reviews/index.html.erb
+++ b/app/views/spree/admin/reviews/index.html.erb
@@ -43,7 +43,7 @@
 		<div class="clear"></div>
 
 		<div class="form-buttons actions filter-actions" data-hook="admin_reviews_index_search_buttons">
-			<%= button Spree.t(:search), 'icon-search' %>
+			<%= button Spree.t(:search) %>
 		</div>
     <%- end -%>
   </div>
@@ -92,7 +92,7 @@
 					<%= l review.created_at, :format => :short %>
 				</td>
 				<td class="actions">
-					<%= link_to_with_icon 'check', Spree.t('approve'), approve_admin_review_url(review), :no_text => true, class: 'approve' unless review.approved %>
+					<%= link_to Spree.t('approve'), approve_admin_review_url(review), :no_text => true, class: 'approve' unless review.approved %>
 					&nbsp;
 					<%= link_to_edit review, :no_text => true, :class => 'edit' %>
 					&nbsp;
