--- a/app/views/spree/admin/review_settings/edit.html.erb
+++ b/app/views/spree/admin/review_settings/edit.html.erb
@@ -32,9 +32,9 @@
 		</div>
 
 		<div class="form-buttons filter-actions actions" data-hook="buttons">
-			<%= button Spree.t('actions.update'), 'icon-refresh' %>
+			<%= button Spree.t('actions.update') %>
 			<span class="or"><%= Spree.t(:or) %></span>
-			<%= link_to_with_icon 'icon-remove', Spree.t('actions.cancel'), edit_admin_general_settings_url, :class => 'button' %>
+			<%= link_to Spree.t('actions.cancel'), edit_admin_general_settings_url, :class => 'button' %>
 		</div>
 	</fieldset>
 <% end %>
