--- a/app/assets/stylesheets/spree/frontend/solidus_reviews.scss
+++ b/app/assets/stylesheets/spree/frontend/solidus_reviews.scss
@@ -1,4 +1,5 @@
 /*
+ *= require jquery-bar-rating
  *= require spree/frontend
 */
 
@@ -33,51 +34,12 @@
   margin: 1em 0;
 }
 
-/* jQuery.Rating Plugin CSS - http://www.fyneworks.com/jquery/star-rating/ */
-div.rating-cancel, div.star-rating {
-  float: left;
-  width: 17px;
-  height: 16px;
-  text-indent: -999em;
-  cursor: pointer;
-  display: block;
-  background: transparent;
-  overflow: hidden
+/* Override jquery-bar-rating settings */
+
+.br-wrapper {
+  display: inline-block;
 }
 
-div.rating-cancel, div.rating-cancel a {
-  background: transparent image-url('store/reviews/delete.gif') no-repeat scroll 0 -1px;
+.br-theme-fontawesome-stars .br-widget a {
+  font: normal normal normal 14px/1 FontAwesome;
 }
-
-div.star-rating, div.star-rating a {
-  background: image-url('store/reviews/star.gif') no-repeat 0 0px
-}
-
-div.rating-cancel a, div.star-rating a {
-  display: block;
-  width: 16px;
-  height: 100%;
-  background-position: 0 0px;
-  border: 0
-}
-
-div.star-rating-on a {
-  background-position: 0 -32px !important
-}
-
-div.star-rating-hover a {
-  background-position: 0 -32px
-}
-
-/* Read Only CSS */
-div.star-rating-readonly a {
-  cursor: default !important
-}
-
-/* Partial Star CSS */
-div.star-rating {
-  background: transparent !important;
-  overflow: hidden !important
-}
-
-/* END jQuery.Rating Plugin CSS */
