--- a/app/views/spree/reviews/_stars.html.erb
+++ b/app/views/spree/reviews/_stars.html.erb
@@ -1,13 +1,16 @@
-<% if defined? edit_enabled
-    state = ""
-    name  = "review[rating]"
+<%
+  if defined?(edit_enabled)
+    state = false
+    selected = 0
   else
-    state = 'disabled'
-    name  = defined?(review).nil? ? Time.now.tv_usec.to_s : "review_#{review}"
-  end %>
-<% for i in 1..NB_STARS %>
-  <input name="<%= name %>"
-         type="radio" class="star"
-         value="<%= pluralize(i, 'stars') %>" <%= state %>
-         <%= "checked" if i == stars %> />
-<% end %>
+    state = true
+    selected = stars if !defined?(stars).nil?
+  end
+%>
+<%=
+  select_tag "review[rating]",
+  options_for_select((1..NB_STARS).to_a,
+  selected: selected),
+  data: { "barrating-options": { readonly: state, theme: THEME } },
+  class: "review-stars"
+%>
