--- a/app/views/spree/admin/reviews/index.html.erb
+++ b/app/views/spree/admin/reviews/index.html.erb
@@ -1,111 +1,112 @@
+<% admin_breadcrumb(link_to plural_resource_name(Spree::Product), spree.admin_products_path) %>
+
 <% content_for :page_title do %>
-	<%= Spree.t('reviews') %>
+  <%= Spree.t('reviews') %>
 <% end %>
 
-<% render 'spree/admin/shared/product_sub_menu' %>
-
 <% content_for :table_filter_title do %>
-	<%= Spree.t('search') %>
+  <%= Spree.t('search') %>
 <% end %>
 
 <% content_for :table_filter do %>
   <div data-hook="admin_reviews_index_search">
-
     <%= search_form_for [:admin, @search] do |f| %>
-		<div class="alpha three columns">
-			<div class="field">
-				<%= label_tag nil, Spree.t(:user) %><br />
-				<%= f.text_field :name_cont, :size => 25 %>
-			</div>
-		</div>
+      <div class="alpha three columns">
+        <div class="field">
+          <%= f.label :name_cont, Spree.t(:user) %><br />
+          <%= f.text_field :name_cont, class: 'fullwidth' %>
+        </div>
+      </div>
 
-		<div class="seven columns">
-			<div class="field">
-				<%= label_tag nil, Spree.t(:title) -%><br/>
-				<%= f.text_field :title_cont, :size => 25  -%>
-			</div>
-		</div>
+      <div class="seven columns">
+        <div class="field">
+          <%= f.label :title_cont, Spree.t(:title) -%><br/>
+          <%= f.text_field :title_cont, class: 'fullwidth'  -%>
+        </div>
+      </div>
 
-		<div class="four columns">
-			<div class="field">
-				<%= label_tag nil, Spree.t(:review) -%><br/>
-				<%= f.text_field :review_cont, :size => 25  -%>
-			</div>
-		</div>
+      <div class="four columns">
+        <div class="field">
+          <%= f.label :review_cont, Spree.t(:review) -%><br/>
+          <%= f.text_field :review_cont, class: 'fullwidth'  -%>
+        </div>
+      </div>
 
-		<div class="two columns omega">
-			<div class="field">
-				<%= label_tag nil, Spree.t(:approval_status)-%><br/>
-				<%= f.select :approved_eq, [[Spree.t('all'), nil], [Spree.t('approved_reviews'), true], [Spree.t('unapproved_reviews'), false]]  -%>
-			</div>
-		</div>
+      <div class="two columns omega">
+        <div class="field">
+          <%= f.label :approved_eq, Spree.t(:approval_status)-%><br/>
+          <%= f.select :approved_eq, [
+              [Spree.t(:all), nil],
+              [Spree.t(:approved_reviews), true],
+              [Spree.t(:unapproved_reviews), false]
+            ], {}, class: 'select2 fullwidth'  -%>
+        </div>
+      </div>
 
-		<div class="clear"></div>
+      <div class="clear"></div>
 
-		<div class="form-buttons actions filter-actions" data-hook="admin_reviews_index_search_buttons">
-			<%= button Spree.t(:search) %>
-		</div>
+      <div class="form-buttons actions filter-actions" data-hook="admin_reviews_index_search_buttons">
+        <%= button Spree.t(:search) %>
+      </div>
     <%- end -%>
   </div>
 <%- end -%>
 
-<% paginate @reviews %>
+<%= paginate @reviews, theme: "solidus_admin" %>
 
 <% if @reviews.any? %>
-	<table class="index">
-		<colgroup>
-			<col style="width: 25%;">
-			<col style="width: 10%;">
-			<col style="width: 10%;">
-			<col style="width: 20%;">
-			<col style="width: 15%;">
-			<col style="width: 17%;">
-		</colgroup>
-		<thead>
-			<tr>
-				<th><%= Spree.t('product') %></th>
-				<th><%= Spree::Review.human_attribute_name(:rating) %></th>
-				<th><%= Spree.t('feedback') %></th>
-				<th><%= Spree::Review.human_attribute_name(:user) %></th>
-				<th><%= Spree::Review.human_attribute_name(:created_at) %></th>
-			</tr>
-		</thead>
-		<tbody>
-		<%- @reviews.each do |review| -%>
-			<tr id="<%= dom_id review %>">
-				<td>
-					<% if review.product %>
-						<%= link_to review.product.name, product_path(review.product) %>
-					<% end %>
-				</td>
-				<td class="align-center">
-					<%= txt_stars(review.rating) %>
-				</td>
-				<td class="align-center">
-					<%= link_to "(#{review.feedback_stars}/#{review.feedback_reviews.size})", admin_review_feedback_reviews_path(review) %>
-				</td>
-				<td class="align-center">
-					<%= review.user_id ? link_to(review.user.try(:email), [:admin, review.user]) : Spree.t(:anonymous) %></p>
-					<p><%= Spree::Review.human_attribute_name(:ip_address) %>: <%= review.ip_address ? link_to(review.ip_address, "http://whois.domaintools.com/#{review.ip_address}") : '-' %></p>
-				</td>
-				<td class="align-center">
-					<%= l review.created_at, :format => :short %>
-				</td>
-				<td class="actions">
-					<%= link_to Spree.t('approve'), approve_admin_review_url(review), :no_text => true, class: 'approve' unless review.approved %>
-					&nbsp;
-					<%= link_to_edit review, :no_text => true, :class => 'edit' %>
-					&nbsp;
-					<%= link_to_delete review, :no_text => true %>
-				</td>
-			</tr>
-		<% end %>
-		</tbody>
-	</table>
+  <table class="index">
+    <colgroup>
+      <col style="width: 25%;">
+      <col style="width: 10%;">
+      <col style="width: 10%;">
+      <col style="width: 20%;">
+      <col style="width: 15%;">
+      <col style="width: 17%;">
+    </colgroup>
+    <thead>
+      <tr>
+        <th><%= Spree.t('product') %></th>
+        <th><%= Spree::Review.human_attribute_name(:rating) %></th>
+        <th><%= Spree.t('feedback') %></th>
+        <th><%= Spree::Review.human_attribute_name(:user) %></th>
+        <th><%= Spree::Review.human_attribute_name(:created_at) %></th>
+      </tr>
+    </thead>
+    <tbody>
+      <%- @reviews.each do |review| -%>
+        <tr id="<%= dom_id review %>">
+          <td>
+            <% if review.product %>
+              <%= link_to review.product.name, product_path(review.product) %>
+            <% end %>
+            </td>
+          <td class="align-center">
+            <%= txt_stars(review.rating) %>
+          </td>
+          <td class="align-center">
+            <%= link_to "(#{review.feedback_stars}/#{review.feedback_reviews.size})", admin_review_feedback_reviews_path(review) %>
+          </td>
+          <td class="align-center">
+            <%= review.user_id ? link_to(review.user.try(:email), [:admin, review.user]) : Spree.t(:anonymous) %></p>
+            <p><%= Spree::Review.human_attribute_name(:ip_address) %>: <%= review.ip_address ? link_to(review.ip_address, "http://whois.domaintools.com/#{review.ip_address}") : '-' %></p>
+          </td>
+          <td class="align-center">
+            <%= l review.created_at, format: :short %>
+          </td>
+          <td class="actions">
+            <%= link_to_with_icon 'ok', Spree.t(:approve), approve_admin_review_url(review), no_text: true, class: 'approve' unless review.approved %>
+            <%= link_to_edit review, no_text: true, class: 'edit' %>
+            <%= link_to_delete review, no_text: true %>
+          </td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 <% else %>
-	<div class="no-objects-found">
-		<%= Spree.t(:no_results) %>
-	</div>
+  <div class="no-objects-found">
+    <%= Spree.t(:no_results) %>
+  </div>
 <% end %>
 
-<%= paginate @reviews -%>
+<%= paginate @reviews, theme: "solidus_admin" -%>
