--- a/app/views/spree/reviews/_stars.html.erb
+++ b/app/views/spree/reviews/_stars.html.erb
@@ -11,6 +11,6 @@
   select_tag "review[rating]",
   options_for_select((1..NB_STARS).to_a,
   selected: selected),
-  data: { "barrating-options": { readonly: state, theme: THEME } },
+  data: { "barrating-options": { readonly: state, theme: "fontawesome-stars" } },
   class: "review-stars"
 %>
