--- a/app/views/spree/admin/reviews/_form.html.erb
+++ b/app/views/spree/admin/reviews/_form.html.erb
@@ -4,6 +4,11 @@
   <%= f.text_field :name, :maxlength => "255", :size => "60" %>
 <% end %>
 
+<%= f.field_container :email do %>
+  <%= f.label :email %><br />
+  <%= mail_to @review.email %>
+<% end %>
+
 <%= f.field_container :title do %>
   <%= f.label :title %><br />
   <%= f.text_field :title, :maxlength => "255", :size => "60" %>
