--- a/app/views/spree/admin/reviews/index.html.erb
+++ b/app/views/spree/admin/reviews/index.html.erb
@@ -71,6 +71,7 @@
         <th><%= Spree.t('feedback') %></th>
         <th><%= Spree::Review.human_attribute_name(:user) %></th>
         <th><%= Spree::Review.human_attribute_name(:created_at) %></th>
+        <th class="actions"></th>
       </tr>
     </thead>
     <tbody>
