--- a/app/views/spree/reviews/_form.html.erb
+++ b/app/views/spree/reviews/_form.html.erb
@@ -29,6 +29,6 @@
   <% end %>
 
   <p class="review_submit">
-    <%= f.submit Spree.t(:submit_your_review), :class => "button bg_darkfirst" %>
+    <%= f.submit I18n.t("spree.submit_your_review"), :class => "button bg_darkfirst" %>
   </p>
 <% end %>
