--- a/app/views/spree/shared/_review.html.erb
+++ b/app/views/spree/shared/_review.html.erb
@@ -4,7 +4,7 @@
   </span>
   <span itemprop="name"><%= review.title %></span>
   <br/>
-  <span class="attribution"><%= Spree.t(:submitted_on) %> <strong><%= l review.created_at.to_date %></strong></span>
+  <span class="attribution"><%= I18n.t("spree.submitted_on") %> <strong><%= l review.created_at.to_date %></strong></span>
   <meta itemprop="datePublished" content="<%= review.created_at.to_date.to_s %>" />
 
   <meta itemprop="reviewRating" content="<%= review.rating %>" />
@@ -15,7 +15,7 @@
       <span itemprop="author"><%= review.name %></span>
     <% end %>
   <% else %>
-      <span itemprop="author"><%= Spree.t(:anonymous) %></span>
+      <span itemprop="author"><%= I18n.t("spree.anonymous") %></span>
   <% end %>
   <div itemprop="reviewBody">
     <%= simple_format(review.review) %>
