--- a/app/views/spree/admin/review_settings/edit.html.erb
+++ b/app/views/spree/admin/review_settings/edit.html.erb
@@ -35,7 +35,7 @@
     <div class="field">
       <label>
         <%= check_box_tag('preferences[require_login]', "1", Spree::Reviews::Config[:require_login]) %>
-        <%= I18n.t("spree.spree_reviews.pero bunrequire_login") %>
+        <%= I18n.t("spree.spree_reviews.require_login") %>
       </label>
     </div>
     <div class="field">
