Added Images to Reviews
Reviews across many other eCommerce platforms support user
uploaded images. Here we use the polymorphic Spree::Image to allow
users to do just that.

--- a/app/views/spree/admin/reviews/_form.html.erb
+++ b/app/views/spree/admin/reviews/_form.html.erb
@@ -19,6 +19,22 @@
   <%= f.text_area :review, :wrap => "virtual", :rows => "10", :cols => "60" %>
 <% end %>
 
+<%= f.field_container :images do %>
+  <%= f.label :images %>
+  <table>
+    <% @review.images.each do |image| %>
+      <tr>
+        <td>
+          <%= image_tag image.url(:original) %>
+        </td>
+        <td>
+          <%= link_to_delete image, url: admin_review_image_url(@review, image, product_id: @review.product), no_text: true  %>
+        </td>
+      </tr>
+    <% end %>
+  </table>
+<% end %>
+
 <% if Spree::Reviews::Config[:track_locale] %>
 <%= f.field_container :locale do %>
   <%= f.label :locale %><br />
