--- a/app/views/spree/shared/_review.html.erb
+++ b/app/views/spree/shared/_review.html.erb
@@ -20,6 +20,11 @@
   <div itemprop="reviewBody">
     <%= simple_format(review.review) %>
   </div>
+  <% review.images.each do |image| %>
+    <div itemprop="image">
+      <%= link_to image_tag(image.url(:product)), image.url(:original) %>
+    </div>
+  <% end %>
   <% if Spree::Reviews::Config[:feedback_rating] && (!Spree::Reviews::Config[:require_login] || spree_current_user) %>
     <div class="feedback_review" id="feedback_review_<%= review.id %>">
       <%= render "spree/feedback_reviews/form", :review => review %>
