--- a/app/views/spree/feedback_reviews/_summary.html.erb
+++ b/app/views/spree/feedback_reviews/_summary.html.erb
@@ -1,6 +1,6 @@
 <p>
-  <%= I18n.t('spree.voice', :count => review.feedback_reviews.count) %>.
+  <%= I18n.t('spree.voice', count: review.feedback_reviews.count) %>.
   <span title="<%= pluralize(review.feedback_stars, 'star') %> <%= I18n.t('spree.out_of_5') %>">
-  <%= render 'spree/reviews/stars', :stars => review.feedback_stars %>
+  <%= render 'spree/reviews/stars', stars: review.feedback_stars %>
   </span> &nbsp;
 </p>
