--- a/app/views/spree/shared/_rating.html.erb
+++ b/app/views/spree/shared/_rating.html.erb
@@ -4,10 +4,10 @@
   <p><%= I18n.t('spree.average_customer_rating') %>: </p>
   <p class="ratings-stars">
     <span title="<%= txt_stars(stars) %>">
-      <%= render 'spree/reviews/stars', :stars => stars %>
+      <%= render 'spree/reviews/stars', stars: stars %>
     </span>
   </p>
-  <p class="ratings-basedupon">(<%= I18n.t('spree.based_upon_review_count', :count => reviews_count) %>)</p>
+  <p class="ratings-basedupon">(<%= I18n.t('spree.based_upon_review_count', count: reviews_count) %>)</p>
   <div itemprop="aggregateRating" itemscope itemtype="http://schema.org/AggregateRating">
     <meta itemprop="ratingValue" content="<%= stars %>" />
     <meta itemprop="reviewCount" content="<%= reviews_count %>" />
