--- a/app/views/spree/admin/feedback_reviews/index.html.erb
+++ b/app/views/spree/admin/feedback_reviews/index.html.erb
@@ -1,5 +1,5 @@
 <% content_for :page_title do %>
-	<%= I18n.t("spree.feedback_review_for", :review => @review.title) %>
+	<%= I18n.t("spree.feedback_review_for", review: @review.title) %>
 <% end %>
 
 <% content_for :page_actions do %>
@@ -31,7 +31,7 @@
 			  <td><%= feedback.user.try(:login) || I18n.t("spree.anonymous") %></td>
 			  <td><%= feedback.rating %></td>
 			  <td class="actions">
-				  <%= link_to_delete feedback, :no_text => true  %>
+				  <%= link_to_delete feedback, no_text: true  %>
 			  </td>
 			</tr>
 		<% end %>
