--- a/app/views/spree/admin/reviews/edit.html.erb
+++ b/app/views/spree/admin/reviews/edit.html.erb
@@ -1,5 +1,5 @@
 <% content_for :page_title do %>
-	<%= I18n.t("spree.editing_review_for_html", :link => link_to(@review.product.name, product_path(@review.product))) %>
+	<%= I18n.t("spree.editing_review_for_html", link: link_to(@review.product.name, product_path(@review.product))) %>
 <% end %>
 
 <% render 'spree/admin/shared/product_sub_menu' %>
@@ -15,7 +15,7 @@
 	</div>
 
 	<div class="omega eight columns">
-		<%= render 'form', :f => f %>
+		<%= render 'form', f: f %>
 	</div>
 
 	<div class="clear"></div>
