--- a/app/views/spree/feedback_reviews/_form.html.erb
+++ b/app/views/spree/feedback_reviews/_form.html.erb
@@ -1,5 +1,5 @@
-<%= render 'spree/feedback_reviews/summary', :review => review %>
-<%= form_for((@feedback_review ||= review.feedback_reviews.build), :url => feedback_reviews_path(review), :method => :post, :remote => true) do |f| %>
+<%= render 'spree/feedback_reviews/summary', review: review %>
+<%= form_for((@feedback_review ||= review.feedback_reviews.build), url: feedback_reviews_path(review), method: :post, remote: true) do |f| %>
 <% unless @feedback_review.errors.empty? %>
  <span class="error"><%= @feedback_review.errors[:rating] %></span>
  <br />
@@ -7,7 +7,7 @@
 <%= I18n.t("spree.was_this_review_helpful") %>
 <% for i in 1..NB_STARS %>
   <%= radio_button_tag "feedback_review[rating]",
-                       I18n.t("spree.star", :count => i), false, :class => "star" %>
+                       I18n.t("spree.star", count: i), false, class: "star" %>
 <% end %>
 <button class="feedback-review"><span><%= I18n.t("spree.say_yes") %></span></button>
 <% end %>
