Added verified purchaser
One feature that many other eCommerce sites have is the concept of
a "verified purchaser" which is when someone leaves a review for a
product they verifiably purchased. In the implementation here we
add a toggle on whether to display the verfied purchaser on the
frontend, a column on the database to store if the review is from
a verified purchaser, and logic when creating the review to set
that value.

--- a/app/views/spree/admin/review_settings/edit.html.erb
+++ b/app/views/spree/admin/review_settings/edit.html.erb
@@ -34,6 +34,12 @@
     </div>
     <div class="field">
       <label>
+        <%= check_box_tag('preferences[show_verified_purchaser]', "1", Spree::Reviews::Config[:show_verified_purchaser]) %>
+        <%= I18n.t("spree.spree_reviews.show_verified_purchaser") %>
+      </label>
+    </div>
+    <div class="field">
+      <label>
         <%= check_box_tag('preferences[require_login]', "1", Spree::Reviews::Config[:require_login]) %>
         <%= I18n.t("spree.spree_reviews.require_login") %>
       </label>
