--- a/app/views/spree/reviews/_form.html.erb
+++ b/app/views/spree/reviews/_form.html.erb
@@ -7,7 +7,7 @@
   </p>
 
   <p class="review_name_field">
-    <%= f.label :name %> <span class="required">*</span><br />
+    <%= f.label :name %><br />
     <%= f.text_field :name, maxlength: "255", size: "50" %>
   </p>
 
@@ -17,7 +17,7 @@
   </p>
 
   <p class="review_review_field">
-    <%= f.label :review %> <span class="required">*</span><br />
+    <%= f.label :review %><br />
     <%= f.text_area :review, wrap: "virtual", rows: "10", cols: "50" %>
   </p>
 
