--- a/app/views/spree/admin/review_settings/edit.html.erb
+++ b/app/views/spree/admin/review_settings/edit.html.erb
@@ -22,6 +22,12 @@
     </div>
     <div class="field">
       <label>
+        <%= check_box_tag('preferences[display_unapproved_reviews]', "1", Spree::Reviews::Config[:display_unapproved_reviews]) %>
+        <%= I18n.t("spree.spree_reviews.display_unapproved") %>
+      </label>
+    </div>
+    <div class="field">
+      <label>
         <%= check_box_tag('preferences[feedback_rating]', "1", Spree::Reviews::Config[:feedback_rating]) %>
         <%= I18n.t("spree.spree_reviews.feedback_rating") %>
       </label>
