--- a/app/views/spree/shared/_review.html.erb
+++ b/app/views/spree/shared/_review.html.erb
@@ -2,7 +2,7 @@
   <span class="reviews-rating" title="<%= txt_stars(review.rating) %>">
     <%= render "spree/reviews/stars", stars: review.rating %>
   </span>
-  <% if review.approved || Spree::Reviews::Config[:display_unapproved_reviews] %>
+  <% if review.approved? || Spree::Reviews::Config[:display_unapproved_reviews] %>
     <span itemprop="name"><%= review.title %></span>
     <br/>
     <span class="attribution"><%= I18n.t("spree.submitted_on") %> <strong><%= l review.created_at.to_date %></strong></span>
