--- a/app/views/spree/shared/_review.html.erb
+++ b/app/views/spree/shared/_review.html.erb
@@ -26,7 +26,7 @@
     </div>
     <% review.images.each do |image| %>
       <div itemprop="image">
-        <%= link_to image_tag(image.url(:product)), image.url(:original) %>
+        <%= link_to image_tag(image.attachment(:product)), image.attachment(:original) %>
       </div>
     <% end %>
     <% if Spree::Reviews::Config[:feedback_rating] && (!Spree::Reviews::Config[:require_login] || spree_current_user) %>
